--- a/attachments/layout.css
+++ b/attachments/layout.css
@@ -33,7 +33,7 @@ ul{list-style:none}
 a{color:#3af;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;text-decoration:none;}
 a:hover{color:#7a7a7a}
 #crew{margin-bottom:20px;}
-#crew > li{position:relative;display:block;margin:20px auto;padding:20px;width:600px;/*min-height:155px;*/vertical-align:top;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;
+#crew > li{min-height: 155px;position:relative;display:block;margin:20px auto;padding:20px;width:600px;/*min-height:155px;*/vertical-align:top;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;
 -webkit-box-shadow:0 1px 2px rgba(0,0,0,0.4);-moz-box-shadow:0 1px 2px rgba(0,0,0,0.4);box-shadow:0 1px 2px rgba(0,0,0,0.4)
 }
 /*
