--- a/attachments/layout.css
+++ b/attachments/layout.css
@@ -31,19 +31,21 @@ html{height:100%;}
 body{}
 ul{list-style:none}
 a{color:#3af;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;text-decoration:none;}
-a:hover{color:#7a7a7a}
-#crew{margin-bottom:20px;}
-#crew > li{min-height: 155px;position:relative;display:block;margin:20px auto;padding:20px;width:600px;/*min-height:155px;*/vertical-align:top;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;
+a:hover{color:#7a7a7a;}
+.crew_card{margin-bottom:20px;}
+.crew_card > li{background-color:white;min-height: 155px;position:relative;display:block;margin:20px auto;padding:20px;width:600px;/*min-height:155px;*/vertical-align:top;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;
 -webkit-box-shadow:0 1px 2px rgba(0,0,0,0.4);-moz-box-shadow:0 1px 2px rgba(0,0,0,0.4);box-shadow:0 1px 2px rgba(0,0,0,0.4)
 }
 /*
-#crew > li:hover{background-color:rgba(255,255,255,0.05);-webkit-transition-duration:"0.2s";-moz-transition-duration:"0.2s";transition-duration:"0.2s"}
+.crew_card > li:hover{background-color:rgba(255,255,255,0.05);-webkit-transition-duration:"0.2s";-moz-transition-duration:"0.2s";transition-duration:"0.2s"}
 */
-#crew > li h3{text-align: left;margin:0;padding:0;font-size:35px;}
-#crew > li h3 img{height:23px;margin-right:10px;border:1px solid dagray;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px}
-#crew > li ul{margin-left:0;}
-#crew > li ul li{width:300px;}
-#crew > li ul li.location img{position:absolute;top:10px;right:10px;border:1px solid dagray;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.4);-moz-box-shadow:0 1px 2px rgba(0,0,0,0.4);box-shadow:0 1px 2px rgba(0,0,0,0.4)}
+.crew_card > li h3{text-align: left;margin:0;padding:0;font-size:35px;}
+.crew_card > li h3 a{color:#7A7A7A;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;text-decoration:none;}
+.crew_card > li h3 a:hover {color:#3af;}
+.crew_card > li h3 img{height:23px;margin-right:10px;border:1px solid dagray;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px}
+.crew_card > li ul{margin-left:0;}
+.crew_card > li ul li{width:300px;}
+.crew_card > li ul li.location img{position:absolute;top:10px;right:10px;border:1px solid dagray;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-box-shadow:0 1px 2px rgba(0,0,0,0.4);-moz-box-shadow:0 1px 2px rgba(0,0,0,0.4);box-shadow:0 1px 2px rgba(0,0,0,0.4)}
 .ttImg{position:absolute;border:1px solid #808080;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;display:none}
 
 
@@ -52,6 +54,8 @@ body {
     background: #f1f2ec;
     color: #7a7a7a;
     font-family: "Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 18px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.60);
 }
 header {
     font-size: 300%;
@@ -83,6 +87,9 @@ p ,p * {
     font-weight: normal;
     font-size: 18px;
     font-family: "Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+p, textarea {
+    line-height: 150%;
 }
 #shade_bend {
     color: transparent;
